--- a/FifaRankings/bin/FifaRankings.dll.config
+++ b/FifaRankings/bin/FifaRankings.dll.config
@@ -10,9 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FifaRankings-20140506111827.mdf;Initial Catalog=aspnet-FifaRankings-20140506111827;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="FifaRankingsContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=App_Data\Fifa.mdf;Initial Catalog=Fifa;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="FifaRankingsContext" connectionString="metadata=res://*/FifaRankings.csdl|res://*/FifaRankings.ssdl|res://*/FifaRankings.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=App_Data\Fifa.mdf;initial catalog=Fifa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="FifaRankingsEntities"
+         connectionString="metadata=res://*/Data.FifaRankings.csdl|res://*/Data.FifaRankings.ssdl|res://*/Data.FifaRankings.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\FifaRankings.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+         providerName="System.Data.EntityClient" />-->
+  <add name="FifaRankingsEntities" connectionString="metadata=res://*/Data.FifaRankingsContext.csdl|res://*/Data.FifaRankingsContext.ssdl|res://*/Data.FifaRankingsContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\FifaRankings.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
