Created Results Controller
Created controller to manage match results, created results list and
moved "log match" action into results controller.

--- a/FifaRankings/FifaRankings.csproj
+++ b/FifaRankings/FifaRankings.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ResultsController.cs" />
     <Compile Include="Data\FifaRankingsContext.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -296,8 +297,9 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Rankings.cshtml" />
-    <Content Include="Views\Home\LogMatch.cshtml" />
+    <Content Include="Views\Results\LogMatch.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
+    <Content Include="Views\Results\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
