--- a/FifaRankings/FifaRankings.csproj
+++ b/FifaRankings/FifaRankings.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PlayersController.cs" />
     <Compile Include="Controllers\ResultsController.cs" />
     <Compile Include="Data\FifaRankingsContext.Context.cs">
       <AutoGen>True</AutoGen>
@@ -300,6 +301,11 @@
     <Content Include="Views\Results\LogMatch.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Results\Index.cshtml" />
+    <Content Include="Views\Players\Create.cshtml" />
+    <Content Include="Views\Players\Delete.cshtml" />
+    <Content Include="Views\Players\Details.cshtml" />
+    <Content Include="Views\Players\Edit.cshtml" />
+    <Content Include="Views\Players\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
