Impl. updated H/C calcs
Implemented updated logic to calculate handicaps.
Updated results data with all division 2 league results.

--- a/FifaRankings/FifaRankings.csproj
+++ b/FifaRankings/FifaRankings.csproj
@@ -185,6 +185,9 @@
     <Compile Include="Data\HandicapsRounded.cs">
       <DependentUpon>FifaRankingsContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\HandicapThreshold.cs">
+      <DependentUpon>FifaRankingsContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\MatchResult.cs">
       <DependentUpon>FifaRankingsContext.tt</DependentUpon>
     </Compile>
